seaqt/QtQml/gen_qqmlexpression.h

class QMetaObject;
class QObject;
class QQmlContext;
class QQmlEngine;
class QQmlExpression;
class QQmlScriptString;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QQmlContext QQmlContext;
typedef struct QQmlEngine QQmlEngine;
typedef struct QQmlError QQmlError;
typedef struct QQmlExpression QQmlExpression;
typedef struct QQmlScriptString QQmlScriptString;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
QQmlExpression* QQmlExpression_new();
QQmlExpression* QQmlExpression_new2(QQmlContext* param1, QObject* param2, struct miqt_string param3);
QQmlExpression* QQmlExpression_new3(QQmlScriptString* param1);
QQmlExpression* QQmlExpression_new4(QQmlContext* param1, QObject* param2, struct miqt_string param3, QObject* param4);
QQmlExpression* QQmlExpression_new5(QQmlScriptString* param1, QQmlContext* param2);
QQmlExpression* QQmlExpression_new6(QQmlScriptString* param1, QQmlContext* param2, QObject* param3);
QQmlExpression* QQmlExpression_new7(QQmlScriptString* param1, QQmlContext* param2, QObject* param3, QObject* param4);
QMetaObject* QQmlExpression_metaObject(const QQmlExpression* self);
void* QQmlExpression_metacast(QQmlExpression* self, const char* param1);
int QQmlExpression_metacall(QQmlExpression* self, int param1, int param2, void** param3);
struct miqt_string QQmlExpression_tr(const char* s);
struct miqt_string QQmlExpression_trUtf8(const char* s);
QQmlEngine* QQmlExpression_engine(const QQmlExpression* self);
QQmlContext* QQmlExpression_context(const QQmlExpression* self);
struct miqt_string QQmlExpression_expression(const QQmlExpression* self);
void QQmlExpression_setExpression(QQmlExpression* self, struct miqt_string expression);
bool QQmlExpression_notifyOnValueChanged(const QQmlExpression* self);
void QQmlExpression_setNotifyOnValueChanged(QQmlExpression* self, bool notifyOnValueChanged);
struct miqt_string QQmlExpression_sourceFile(const QQmlExpression* self);
int QQmlExpression_lineNumber(const QQmlExpression* self);
int QQmlExpression_columnNumber(const QQmlExpression* self);
void QQmlExpression_setSourceLocation(QQmlExpression* self, struct miqt_string fileName, int line);
QObject* QQmlExpression_scopeObject(const QQmlExpression* self);
bool QQmlExpression_hasError(const QQmlExpression* self);
void QQmlExpression_clearError(QQmlExpression* self);
QQmlError* QQmlExpression_error(const QQmlExpression* self);
QVariant* QQmlExpression_evaluate(QQmlExpression* self);
void QQmlExpression_valueChanged(QQmlExpression* self);
void QQmlExpression_connect_valueChanged(QQmlExpression* self, intptr_t slot);
struct miqt_string QQmlExpression_tr2(const char* s, const char* c);
struct miqt_string QQmlExpression_tr3(const char* s, const char* c, int n);
struct miqt_string QQmlExpression_trUtf82(const char* s, const char* c);
struct miqt_string QQmlExpression_trUtf83(const char* s, const char* c, int n);
void QQmlExpression_setSourceLocation3(QQmlExpression* self, struct miqt_string fileName, int line, int column);
QVariant* QQmlExpression_evaluate1(QQmlExpression* self, bool* valueIsUndefined);
bool QQmlExpression_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QQmlExpression_virtualbase_metaObject(const void* self);
bool QQmlExpression_override_virtual_metacast(void* self, intptr_t slot);
void* QQmlExpression_virtualbase_metacast(void* self, const char* param1);
bool QQmlExpression_override_virtual_metacall(void* self, intptr_t slot);
int QQmlExpression_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QQmlExpression_override_virtual_event(void* self, intptr_t slot);
bool QQmlExpression_virtualbase_event(void* self, QEvent* event);
bool QQmlExpression_override_virtual_eventFilter(void* self, intptr_t slot);
bool QQmlExpression_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QQmlExpression_override_virtual_timerEvent(void* self, intptr_t slot);
void QQmlExpression_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QQmlExpression_override_virtual_childEvent(void* self, intptr_t slot);
void QQmlExpression_virtualbase_childEvent(void* self, QChildEvent* event);
bool QQmlExpression_override_virtual_customEvent(void* self, intptr_t slot);
void QQmlExpression_virtualbase_customEvent(void* self, QEvent* event);
bool QQmlExpression_override_virtual_connectNotify(void* self, intptr_t slot);
void QQmlExpression_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QQmlExpression_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QQmlExpression_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QQmlExpression_staticMetaObject();
void QQmlExpression_delete(QQmlExpression* self);